--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2732,7 +2732,7 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #3490dc;
+    background: -moz-linear-gradient(right, #21d4fd, #b721ff, #21d4fd, #b721ff);
   border-color: #3490dc;
 }
 
