--- a/public/css/main.css
+++ b/public/css/main.css
@@ -57,3 +57,51 @@ html, body {
 .m-b-md {
     margin-bottom: 30px;
 }
+
+
+
+.wgNavbar {
+    background-image: linear-gradient(to right, #6f9bdf 0%, #c46af7 100%);
+    box-shadow: 0px 0px 6px #000 !important;
+}
+
+
+.wgButton {
+    background-image: linear-gradient(to left, #3c86f9 0%, #ed88f0 45%, #ed88f0 50%, #ed88f0 55%, #3c86f9 100%);
+    background-position: right;
+    background-size: 200%;
+    transition: background-position 1s;
+    border: 1px solid #fff;
+    border-radius: 25px;
+    padding: 11px 53px;
+}
+
+.wgButton:hover {
+    background-position: left;
+    border: 1px solid #fff;
+}
+
+.wgInputFieldWrapper {
+    background-color: #666;
+    background-image: linear-gradient(to left, #3c86f9 0%, #ed88f0 45%, #ed88f0 50%, #ed88f0 55%, #3c86f9 100%);
+    background-position: right;
+    background-size: 200%;
+    transition: background-position 1s;
+    padding: 0px 0px 2px 0px;
+}
+
+.wgInputFieldWrapper:hover {
+    /*background-image: linear-gradient(to left, #3c86f9 0%, #ed88f0 100%);*/
+    background-position: left;
+}
+
+.wgInputField {
+    background-color: #fff;
+    border-radius: 0px;
+    border: none;
+}
+
+.wgInputField:focus {
+    border: none;
+    box-shadow: none;
+}
