Registrierung mit api_token :+1:

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -117,7 +117,7 @@ html, body {
     padding: 0px 0px 2px 0px;
 }
 
-.wgInputFieldWrapper:hover {
+.wgInputFieldWrapper:hover, .wgInputFieldWrapper:active, .wgInputFieldWrapper:focus {
     /*background-image: linear-gradient(to left, #3c86f9 0%, #ed88f0 100%);*/
     background-position: left;
 }
