--- a/public/css/main.css
+++ b/public/css/main.css
@@ -61,7 +61,7 @@ html, body {
 
 
 .wgNavbar {
-    background-image: linear-gradient(to right, #7fb1ff 0%, #e896ff 100%);
+    background-image: linear-gradient(to right, #79ffff 0%, #e896ff 100%);
     box-shadow: 0px 0px 6px #000 !important;
 }
 
