--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5080,8 +5080,14 @@ input[type=button].btn-block {
 
 .card-footer {
   padding: 0.75rem 1.25rem;
-  background-color: rgba(0, 0, 0, 0.03);
+   background-color: rgba(0, 0, 0, 0.08);
+
   border-top: 1px solid rgba(0, 0, 0, 0.125);
+position: fixed;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    text-align: center;
 }
 
 .card-footer:last-child {
