--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -7,5 +7,11 @@ display: flex;
     justify-content: space-around;
 }
 
+#workonprofile{
 
+    background-color: darkgoldenrod;
+    overflow: hidden;
+    float: top;
+    justify-content: center;
 
+}
