--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -15,3 +15,12 @@ display: flex;
     justify-content: center;
 
 }
+table, td{
+    border: 0,5px solid black;
+    border-collapse: separate;
+    width: 80%;
+}
+tbody tr:nth-child(even){
+    background-color: #e4ebf2;
+    color:#000;
+}
