Dann halt wieder weniger Bunti
Dropdown-Menü haben die Icons bei Profil und Logout nur eigene Farben, alle anderen sollen einheitlich Blau bleiben

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -169,7 +169,7 @@ html, body {
 }
 
 .wgNavMenu .wgNavGroceryList span {
-    color:#0ddd84;
+    color:#3f95f3;
 }
 
 .wgNavMenu .wgNavAppointment {
