--- a/public/css/main.css
+++ b/public/css/main.css
@@ -195,3 +195,12 @@ html, body {
 .wgNavMenu .wgNavLogout span {
     color:#f2235d;
 }
+
+.wgFooter {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color:#f5f5f5;
+}
