--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -25,8 +25,24 @@ tbody tr:nth-child(even){
     color:#000;
 }
 
-
-#ibimsbutton:hover {
-    cursor: pointer;
-    color: #f60;
+.profileinputhide {
+    display: none;
 }
+
+#givennamechange:hover {
+     cursor: pointer;
+     color: #90EE90;
+ }
+
+
+#namechange:hover {
+    cursor: pointer;
+    color: #90EE90;
+}
+
+#emailchange:hover {
+    cursor: pointer;
+    color: #90EE90;
+}
+
+
