Benutzerverwaltung abgeschlossen :deciduous_tree:
-Design überarbeitet
-Daten können in Datenbank geschrieben werden
-Funktion für DatumFormat implementiert

:beers:

ToDO: WG-Austritt!!

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,6 +59,10 @@ html, body {
     margin-bottom: 30px;
 }
 
+.wgcurnotallowed {
+    cursor: not-allowed;
+}
+
 .wgArrowBack {
     font-size: 100%;
     margin: 0 15px 0 0;
