--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,9 +12,9 @@ html, body {
     color: #636b6f;
     font-family: 'Nunito', sans-serif;
     font-weight: 200;
-    height: 100vh;
-    margin: 0;
-    padding-top: 2rem;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
 .full-height {
@@ -53,6 +53,12 @@ html, body {
     letter-spacing: .1rem;
     text-decoration: none;
     text-transform: uppercase;
+}
+
+.wgAppContainer {
+    height: auto;
+    min-height: 100%;
+    margin: -60px 0 0 0;
 }
 
 .m-b-md {
@@ -94,6 +100,11 @@ html, body {
     background-color: #fff;
     padding: 5px 6px 6px 7px;
     border-radius: 50%;
+}
+
+
+.wgMainContainer {
+    padding: 155px 0 0 0 !important;
 }
 
 .wgButton {
@@ -173,6 +184,7 @@ html, body {
 .logininfo{
     display: flex;
     justify-content: center;
+    margin: 15px 0 15px 0;
 }
 
 
@@ -237,10 +249,7 @@ html, body {
  */
 
 .wgFooter {
-    position: fixed;
-    bottom: 0;
     width: 100%;
     height: 60px;
-    line-height: 60px;
     background-color:#f5f5f5;
 }
