--- a/public/css/main.css
+++ b/public/css/main.css
@@ -262,4 +262,12 @@ html, body {
     width: 100%;
     height: 60px;
     background-color:#f5f5f5;
+    padding: 11px 0 !important;
+}
+
+.wgFooter .wgcisLogo {
+    height: 30px;
+    width: auto;
+    vertical-align: top;
+    margin: 2px 5px 0 5px
 }
