--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -53,6 +53,15 @@ tbody tr:nth-child(even){
     color: #90EE90;
 }
 
+#givennameworkonfail{
+    display: none;
 
 
-
+    width: 100%;
+}
+.givennameworkonfail{
+    text-align: center;
+}
+.profilechoiceerrormessages{
+    text-align: center;
+}
