--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,6 +55,13 @@ html, body {
     text-transform: uppercase;
 }
 
+.card {
+    margin: 0 0 20px 0;
+}
+.card:last-child {
+    margin: 0 0 0px 0;
+}
+
 .wgAppContainer {
     height: auto;
     min-height: 100%;
