Überprüfen ob Felder leer sind bei Profilworkon

--- a/public/css/management/profile.css
+++ b/public/css/management/profile.css
@@ -59,6 +59,14 @@ tbody tr:nth-child(even){
 
     width: 100%;
 }
+
+#nameworkonfail{
+    display: none;
+}
+
+#emailworkonfail{
+    display: none;
+}
 .givennameworkonfail{
     text-align: center;
 }
