Passwort Ändern Fehlerbehandlung und Route zurück :baby_chick:
Co-Authored-By: vi-llauterbach <vi-llauterbach@users.noreply.github.com>

--- a/public/css/management/profile.css
+++ b/public/css/management/profile.css
@@ -124,6 +124,10 @@ tbody tr:nth-child(even){
     text-align: center;
 }
 
+.wgerrormessages{
+    display: none;
+}
+
 
 #wgProfileFlatshareLeaveSuccess {
     display: none;
