Einkaufsliste Grundgerüst erweitert :balloon:
Co-Authored-By: vi-ahofmann <vi-ahofmann@users.noreply.github.com>
Co-Authored-By: hammy1988 <hammy1988@users.noreply.github.com>

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -194,6 +194,19 @@ html, body {
     margin: 15px 0 15px 0;
 }
 
+.wgtable {
+    display: table;
+    border-collapse:collapse;
+}
+.wgtable .wgtr {
+    display:table-row;
+}
+.wgtable .wgtr .wgtd {
+    display:table-cell;
+    border:thin solid darkgray;
+    padding:5px;
+}
+
 
 /*
 ###################
