--- a/public/css/main.css
+++ b/public/css/main.css
@@ -111,7 +111,7 @@ html, body {
 
 
 .wgMainContainer {
-    padding: 155px 0 0 0 !important;
+    padding: 155px 0 20px 0 !important;
 }
 
 .wgButton {
@@ -160,7 +160,7 @@ html, body {
     border: none;
     display: block;
     width: 100%;
-    height: calc(1.6em + 0.75rem + 2px);
+    /*height: calc(1.6em + 0.75rem + 2px);*/
     padding: 0.375rem 0.75rem;
     font-size: 0.9rem;
     font-weight: 400;
@@ -191,7 +191,7 @@ html, body {
 .logininfo{
     display: flex;
     justify-content: center;
-    margin: 15px 0 15px 0;
+    margin: 15px 0 0 0;
 }
 
 .wgtable {
