--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -31,6 +31,11 @@
         display: block;
     }
 
+    #createWG, #joinInWG {
+        margin: 0 auto;
+        display: block;
+    }
+
     .wgChoiceOptions {
         display: block;
     }
