--- a/public/css/main.css
+++ b/public/css/main.css
@@ -277,3 +277,40 @@ html, body {
     vertical-align: top;
     margin: 2px 5px 0 5px
 }
+
+
+/* Overlay */
+body.wgShowOverlay {
+    overflow: hidden;
+    position: fixed;
+    z-index: 1;
+    display: block;
+    height: 100%;
+    width: 100%;
+}
+
+.wgOverlayWrapper {
+    display: none;
+}
+
+.wgShowOverlayWrapper {
+    background-color: rgba(0, 0, 0, 0.6);
+    display: block;
+    left: 0px;
+    top: 0px;
+    position: fixed;
+    z-index: 99999;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+}
+
+.wgOverlayWrapper .wgOverlayInnerWrapper {
+    margin-right: unset;
+    margin-left: unset;
+}
+
+.wgOverlayWrapper .wgOverlayInnerWrapper > div {
+    margin: 50px 0 50px 0;
+    max-width: 750px;
+}
